2004-11-06  Thomas Wood  <thos@gnome.org>

	* branded/GNOME-Aqua.jpg: Higher quality version
	* branded/GNOME-Black.jpg: Re-added with 1600x1200 version
	* branded/GNOME-Weirdcolours.jpg: (added)
	* branded/GNOME-Wierdcolours.jpg: (removed)

	Corrected filename spelling mistake
	
	* branded/Makefile.am:
	* branded/gnome-branded.xml.in.in:

	Updated to reflect changes

2004-11-03  Thomas Wood  <thos@gnome.org>

	* abstract/Makefile.am:
	* abstract/gnome-abstract.xml.in.in:
	* branded/Makefile.am:
	* branded/gnome-branded.xml.in.in:
	* configure.in:
	* po/POTFILES.in:
	* po/gnome-backgrounds.pot:
	* tiles/Makefile.am:
	* tiles/gnome-tiles.xml.in.in:
	* translucent/Makefile.am:
	* translucent/gnome-translucent.xml.in.in:

	XML files for gnome-background-properties added from patch by Andrew
	Johnson. Makefiles updated to reflect changes.
	
	* translucent/grids.png: Removed.

2004-11-02  Thomas Wood  <thos@gnome.org>

	* branded/GNOME-Black.jpg:
	* branded/GNOME-Bluewave.jpg:
	
	Removed - No 1600x1200 version available
	
	* branded/GNOME-Redblured.jpg:
	* branded/GNOME-Redblurred.jpg:

	Fixed spelling error
	
	* branded/Makefile.am:
	* translucent/Makefile.am:

	Updated to refelect current content

2004-07-04  Thomas Wood <thos@gnome.org>

	* abstract/*:
	* branded/*:
	* tiles/*:
	* translucent/centric-translucent.png:
	* translucent/seahorse-translucent.svg:
	* translucent/stripes-translucent.png:

	Lots of new backgrounds added

2003-09-26  Jakub Steiner <jimmac@ximian.com>

	* translucent/rects.png: 1024x768 moving rectangles
	* translucent/Makefile.am: added

2003-09-18  Jakub Steiner <jimmac@ximian.com>

	* translucent/masle.png: 1600x1200 translucent greyscale+alpha
	* translucent/Makefile.am: added

2003-08-10 Mark Finlay <sisobATtuxfamilyDOTorg>

	* Autogen.sh: Fix up file checks so that it actually runs
	* configure.in: Add translucent/Makefile; Added AM_INIT
	* Makefile.am: added translucent subdir

	* translucent: ADDED
	* translucent/ellipsis.png : ADDED