@@ -1,1 +1,3 @@
-SUBDIRS = abstract branded tiles translucent
+SUBDIRS = abstract branded tiles translucent po
+
+EXTRA_DIST = intltool-extract.in intltool-merge.in intltool-update.in
