@@ -2,22 +2,22 @@
 <!DOCTYPE wallpapers SYSTEM "gnome-wp-list.dtd">
 <wallpapers>
   <wallpaper deleted="false">
-    <name>Due (Abstract)</name>
+    <_name>Due (Abstract)</_name>
     <filename>@datadir@/pixmaps/backgrounds/gnome/abstract/due.jpg</filename>
     <options>scaled</options>
   </wallpaper>
   <wallpaper deleted="false">
-    <name>Due Alternate (Abstract)</name>
+    <_name>Due Alternate (Abstract)</_name>
     <filename>@datadir@/pixmaps/backgrounds/gnome/abstract/due-alt.jpg</filename>
     <options>scaled</options>
   </wallpaper>
   <wallpaper deleted="false">
-    <name>Scie (Abstract)</name>
+    <_name>Scie (Abstract)</_name>
     <filename>@datadir@/pixmaps/backgrounds/gnome/abstract/scie.jpg</filename>
     <options>scaled</options>
   </wallpaper>
   <wallpaper deleted="false">
-    <name>Scie Alternate (Abstract)</name>
+    <_name>Scie Alternate (Abstract)</_name>
     <filename>@datadir@/pixmaps/backgrounds/gnome/abstract/scie-alt.jpg</filename>
     <options>scaled</options>
   </wallpaper>
