@@ -2,27 +2,27 @@
 <!DOCTYPE wallpapers SYSTEM "gnome-wp-list.dtd">
 <wallpapers>
   <wallpaper deleted="false">
-    <name>Red Blurred (GNOME Branded)</name>
+    <_name>Red Blurred (GNOME Branded)</_name>
     <filename>@datadir@/pixmaps/backgrounds/gnome/branded/GNOME-Redblurred.jpg</filename>
     <options>scaled</options>
   </wallpaper>
   <wallpaper deleted="false">
-    <name>Hills (GNOME Branded)</name>
+    <_name>Hills (GNOME Branded)</_name>
     <filename>@datadir@/pixmaps/backgrounds/gnome/branded/GNOME-Hills.jpg</filename>
     <options>scaled</options>
   </wallpaper>
   <wallpaper deleted="false">
-    <name>Aqua Foot (GNOME Branded)</name>
+    <_name>Aqua Foot (GNOME Branded)</_name>
     <filename>@datadir@/pixmaps/backgrounds/gnome/branded/GNOME-Aqua.jpg</filename>
     <options>scaled</options>
   </wallpaper>
   <wallpaper deleted="false">
-    <name>Weird Colours (GNOME Branded)</name>
+    <_name>Weird Colours (GNOME Branded)</_name>
     <filename>@datadir@/pixmaps/backgrounds/gnome/branded/GNOME-Weirdcolours.jpg</filename>
     <options>scaled</options>
   </wallpaper>
   <wallpaper deleted="false">
-    <name>Black (GNOME Branded)</name>
+    <_name>Black (GNOME Branded)</_name>
     <filename>@datadir@/pixmaps/backgrounds/gnome/branded/GNOME-Black.jpg</filename>
     <options>scaled</options>
   </wallpaper>
