@@ -16,6 +16,7 @@ AM_MAINTAINER_MODE
 AC_OUTPUT([
 Makefile
 abstract/Makefile
+po/Makefile.in
 branded/Makefile
 tiles/Makefile
 translucent/Makefile
